@@ -79,7 +79,8 @@ DECLARE SUB refresh_keepalive_file ()
 DECLARE FUNCTION read_keepalive_as_days (keepalive_file as string) as integer
 DECLARE FUNCTION guess_age_by_tmpdir_name(dirname as string) as integer
 
-DECLARE SUB email_save_to_developer()
+DECLARE SUB email_save_to_developer(save_slot as integer = -1, subject as string = "", body as string = "")
+
 
 DECLARE SUB update_virtual_gamepad_display()
 DECLARE FUNCTION calc_virtual_gamepad_state() as bool
