@@ -178,6 +178,7 @@ March ?? 2016 [Callipygous]
     * "pixel focus camera" [James]
     * Added 'visible only' argument to "slice at pixel" and
       "find colliding slice" [Ralph]
+    * "send email" (Android only) [Ralph]
 
   * Performance Fixes
     * Fixed delay when opening a menu that happened when a large number
